--- a/NTierSardırımRes.IOC/NTierSardırımRes.IOC.csproj
+++ b/NTierSardırımRes.IOC/NTierSardırımRes.IOC.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NTierSardırımRes.DAL\NTierSardırımRes.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
