--- a/NTierSardırımRes.IOC/NTierSardırımRes.IOC.csproj
+++ b/NTierSardırımRes.IOC/NTierSardırımRes.IOC.csproj
@@ -10,6 +10,7 @@
 	
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="Microsoft.PowerBI.Api" Version="4.18.0" />
   </ItemGroup>
 
   <ItemGroup>
